# rusoto

./: Cargo.toml  build.rs
codegen/: Cargo.toml  build.rs  s3.rs
codegen/src/: lib.rs  serialization.rs  util.rs
codegen/src/generator/: query.rs  tests.rs
src/: credential.rs  lib.rs  signature.rs  sts.rs
tests/: iam.rs  s3.rs  sqs.rs  sts.rs
