[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>"]
build = "build.rs"
description = "Code generation library for Rusoto."
license = "MIT"
name = "rusoto_codegen"
repository = "https://github.com/rusoto/rusoto"
version = "0.2.5"
include = ["tests", "botocore/tests/unit/response_parsing"]

[build-dependencies]
includedir_codegen = "0.2.0"

[build-dependencies.serde_codegen]
optional = true
version = "0.8.0"

[dependencies]
Inflector = { github = "https://github.com/whatisinternet/inflector.git", rev = "b657625bf704534324470d37512e89d4136269a0" }
lazy_static = "0.1.16"
regex = "0.1.65"
serde = "0.8.0"
serde_json = "0.8.0"
includedir = "0.2.0"
phf = "0.7.12"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.serde_codegen]
optional = true
version = "0.8.0"

[dependencies.serde_macros]
optional = true
version = "0.8.0"

[dependencies.syntex]
optional = true
version = "0.39.0"

[features]
default = ["with-syntex"]
nightly-testing = ["clippy", "unstable"]
unstable = ["serde_macros"]
with-syntex = ["serde_codegen", "syntex"]
